# localstack-aws-projects-learn

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  notification-test.md  pyproject.toml
.opencode/skills/clf-c02-lens/: SKILL.md
01-quickstart-s3/: README.md  quickstart.py
02-serverless-image-resizer/: DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  README.md
02-serverless-image-resizer/app/: Makefile
02-serverless-image-resizer/app/deployment/awslocal/: post-setup.sh
02-serverless-image-resizer/app/deployment/terraform/: main.tf  variables.tf
02-serverless-image-resizer/app/deployment/terraform/policies/: list_lambda_s3_buckets.json.tpl  styletransfer_lambda_s3_buckets.json.tpl
02-serverless-image-resizer/app/lambdas/list/: handler.py
02-serverless-image-resizer/app/lambdas/styletransfer/: handler.py
02-serverless-image-resizer/app/lambdas/styletransfer/charset_normalizer-3.4.6.dist-info/: RECORD
02-serverless-image-resizer/app/website/: app.js  index.html
02-serverless-image-resizer/docs/plans/: 2026-03-30-ai-style-transfer-design.md
03-s3-static-website-terraform/: README.md  error.html  index.html  main.tf  outputs.tf  provider.tf  variables.tf
docs/: aws-clf-c02-brief.md  aws-clf-c02-question-patterns.md
